lib/package/src/package/snapshots/wasmer_package__package__manifest__tests__custom_annotations_are_copied_across_verbatim.snap
---
source: crates/webc/src/wasmer_package/manifest.rs
description: "\n        [package]\n        name = \"test\"\n        version = \"0.0.0\"\n        description = \"asdf\"\n\n        [[module]]\n        name = \"module\"\n        source = \"file.wasm\"\n        abi = \"wasi\"\n\n        [[command]]\n        name = \"command\"\n        module = \"module\"\n        runner = \"asdf\"\n        annotations = { first = 42, second = [\"a\", \"b\"] }\n        "
expression: "&transformed"
---
package:
  wapm:
    name: test
    version: 0.0.0
    description: asdf
atoms:
  module:
    kind: "https://webc.org/kind/wasm"
    signature: "sha256:Wjn+71LlO4/+39cFFVbsEF7YaYLxIqBdJyjZZ3jk65Y="
commands:
  command:
    runner: "https://webc.org/runner/asdf"
    annotations:
      atom:
        name: module
      first: 42
      second:
        - a
        - b
entrypoint: command

