lib/package/src/package/snapshots/wasmer_package__package__manifest__tests__issue_124_command_runner_is_swallowed.snap
---
source: crates/webc/src/wasmer_package/manifest.rs
description: "\n            [package]\n            name = \"wasmer-tests/wcgi-always-panic\"\n            version = \"0.1.0\"\n            description = \"wasmer-tests/wcgi-always-panic website\"\n\n            [[module]]\n            name = \"wcgi-always-panic\"\n            source = \"./wcgi-always-panic.wasm\"\n            abi = \"wasi\"\n\n            [[command]]\n            name = \"wcgi\"\n            module = \"wcgi-always-panic\"\n            runner = \"https://webc.org/runner/wcgi\"\n        "
expression: "&transformed"
---
package:
  wapm:
    name: wasmer-tests/wcgi-always-panic
    version: 0.1.0
    description: wasmer-tests/wcgi-always-panic website
atoms:
  wcgi-always-panic:
    kind: "https://webc.org/kind/wasm"
    signature: "sha256:Wjn+71LlO4/+39cFFVbsEF7YaYLxIqBdJyjZZ3jk65Y="
commands:
  wcgi:
    runner: "https://webc.org/runner/wcgi"
    annotations:
      atom:
        name: wcgi-always-panic
      wasi:
        atom: wcgi-always-panic
entrypoint: wcgi

