lib/package/src/package/snapshots/wasmer_package__package__manifest__tests__transform_wasmer_pack_manifest.snap
---
source: crates/webc/src/wasmer_package/manifest.rs
description: "\n            [package]\n            name = \"wasmer/wasmer-pack\"\n            version = \"0.7.0\"\n            description = \"The WebAssembly interface to wasmer-pack.\"\n            license = \"MIT\"\n            readme = \"README.md\"\n            repository = \"https://github.com/wasmerio/wasmer-pack\"\n            homepage = \"https://wasmer.io/\"\n\n            [[module]]\n            name = \"wasmer-pack-wasm\"\n            source = \"wasmer_pack_wasm.wasm\"\n\n            [module.bindings]\n            wai-version = \"0.2.0\"\n            exports = \"wasmer-pack.exports.wai\"\n            imports = []\n        "
expression: "&transformed"
---
package:
  wapm:
    name: wasmer/wasmer-pack
    version: 0.7.0
    description: The WebAssembly interface to wasmer-pack.
    license: MIT
    readme:
      volume: metadata
      path: /README.md
    repository: "https://github.com/wasmerio/wasmer-pack"
    homepage: "https://wasmer.io/"
atoms:
  wasmer-pack-wasm:
    kind: "https://webc.org/kind/wasm"
    signature: "sha256:Wjn+71LlO4/+39cFFVbsEF7YaYLxIqBdJyjZZ3jk65Y="
bindings:
  - name: library-bindings
    kind: wai@0.2.0
    annotations:
      wai:
        exports: "metadata://wasmer-pack.exports.wai"
        module: wasmer-pack-wasm
        imports: []
